changing index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <body>
     <h1>anirban</h1>
-    <p>This is the first crowfunding app.</p>
+    <p>Hello world from index.html</p>
   </body>
 </html>
 
